# audio-ai-toy

./: .gitignore  README.md  app.py  audioai.py  pyproject.toml
static/: WavAudioEncoder.min.js  flowchart.css
templates/: index.html
