[tool.poetry]
name = "audio-ai-toy"
version = "0.1.0"
description = ""
authors = ["Xavier Snelgrove <xavier@probablystudio.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
llvmlite = ">=0.36"
numba = ">=0.53"
ddsp = { git = "https://github.com/wxs/ddsp.git", branch = "main" }
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pip = "^21.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
